--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff"> -->
 
-    <!--Preload-->
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="/scss/main.css">
+    <!-- Styles -->
+    <link rel="stylesheet" href="/scss/variables.css">
+    <link rel="stylesheet" href="/scss/critical.css">
+    <link rel="stylesheet" href="/scss/main.css" media="all" onload="this.media='all'; this.onload=null;">
+    <link rel="stylesheet" href="/scss/swiper/swiper-bundle.min.css">
+    
+    <!-- Preload -->
+    <link rel="preload" as="image" href="/assets/RivasWebDesignsWhite.svg">
+    <link rel="preload" as="font" type="font/woff2" href="/fonts/GeneralSans-Light.woff2" crossorigin="">
+    <link rel="preload" as="font" type="font/woff2" href="/fonts/GeneralSans-Regular.woff2" crossorigin="">
 
     <title>Title | Business | Location, OK</title>
 </head>
