overlap and opt

--- a/index.html
+++ b/index.html
@@ -90,6 +90,52 @@
             <!-- Content-->
         </section>
         <!-- Landing Section End -->
+        <!-- Overlapping element -->
+        <div class="landing-overlap">
+            <div class="card">
+                <div class="head">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img03m.webp">
+                        <source media="(min-width: 601)" srcset="/assets/img03m.webp">
+                        <img src="/assets/img03m.webp" alt="lawnmower" width="300" height="166">
+                    </picture>
+                </div>
+                <div class="body">
+                    <h3>Maintenance</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
+                    <a href="#"><p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20"></a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="head">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img05.webp">
+                        <source media="(min-width: 601)" srcset="/assets/img05.webp">
+                        <img src="/assets/img05m.webp" alt="house" width="300" height="166">
+                    </picture>
+                </div>
+                <div class="body">
+                    <h3>Urban</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
+                    <a href="#"><p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20"></a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="head">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img04m.webp">
+                        <source media="(min-width: 601)" srcset="/assets/img04m.webp">
+                        <img src="/assets/img04m.webp" alt="" width="300" height="166">
+                    </picture>
+                </div>
+                <div class="body">
+                    <h3>Gardens</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
+                    <a href="#"><p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20"></a>
+                </div>
+            </div>
+        </div>
+        <!-- Overlapping element -->
     </main>
     <!-- Main End -->
     <!-- Footer -->
