intro and opt started

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                 <div class="body">
                     <h3>Maintenance</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
-                    <a href="#"><p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20"></a>
+                    <a href="#">
+                        <p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
+                    </a>
                 </div>
             </div>
             <div class="card">
@@ -117,7 +119,9 @@
                 <div class="body">
                     <h3>Urban</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
-                    <a href="#"><p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20"></a>
+                    <a href="#">
+                        <p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
+                    </a>
                 </div>
             </div>
             <div class="card">
@@ -131,11 +135,42 @@
                 <div class="body">
                     <h3>Gardens</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
-                    <a href="#"><p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20"></a>
+                    <a href="#">
+                        <p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
+                    </a>
                 </div>
             </div>
         </div>
         <!-- Overlapping element -->
+        <!-- intro start -->
+        <section id="intro">
+            <div class="container">
+                <div class="graphics">
+                    <picture class="abs">
+                        <img src="/assets/grassi.png" alt="" width="" height="">
+                    </picture>
+                    <picture>
+                        <img src="/assets/img01i.png" alt="" width="" height="">
+                    </picture>
+                </div>
+                <div class="content">
+                    <span>About Us</span>
+                    <h2>Green Country’s Top
+                        rated Landscaping Experts </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
+                        nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed
+                        orci suspendisse. Vitae nisl euismod consectetur sed sit molestie. Integer porttitor tellus
+                        vestibulum dolor mi venenatis turpis.
+                    </p>
+                    <div class="btns">
+                        <a href="#" class="btn">Contact us</a>
+                        <a href="#" class="btn">About Us</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- intro end -->
     </main>
     <!-- Main End -->
     <!-- Footer -->
