intro section and opt

--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
         <section id="intro">
             <div class="container">
                 <div class="graphics">
-                    <picture class="abs">
-                        <img src="/assets/grassi.png" alt="" width="" height="">
-                    </picture>
-                    <picture>
-                        <img src="/assets/img01i.png" alt="" width="" height="">
-                    </picture>
+
+                    <div class="pos">
+                        <img src="/assets/grassi.webp" class='abs' alt="" width="" height="">
+
+                        <img src="/assets/img01i.webp" alt="" width="" height="">
+                    </div>
                 </div>
                 <div class="content">
                     <span>About Us</span>
