services & misc quote section opt

--- a/index.html
+++ b/index.html
@@ -171,6 +171,80 @@
             </div>
         </section>
         <!-- intro end -->
+        <!-- Home Services Start -->
+        <section id="home-services">
+            <div class="heading">
+                <span>Our Services</span>
+                <h2>Let Us Bring Your Yard <br> Back To Life</h2>
+            </div>
+            <div class="container">
+                <div class="card">
+                    <img src="/assets/lanscape.svg" width="25" height="25" alt="">
+                    <div>
+                        <h3>Service Item #1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
+                            nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
+                            sed orci suspendisse. </p>
+                        <a href="#">
+                            <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
+                        </a>
+                    </div>
+                    <div class="hover-img"></div>
+                </div>
+                <div class="card">
+                    <img src="/assets/lanscape.svg" width="25" height="25" alt="">
+                    <div>
+                        <h3>Service Item #2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
+                            nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
+                            sed orci suspendisse. </p>
+                        <a href="#">
+                            <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
+                        </a>
+                    </div>
+                    <div class="hover-img"></div>
+                </div>
+                <div class="card">
+                    <img src="/assets/lanscape.svg" width="25" height="25" alt="">
+                    <div>
+                        <h3>Service Item #3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
+                            nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
+                            sed orci suspendisse. </p>
+                        <a href="#">
+                            <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
+                        </a>
+                    </div>
+                    <div class="hover-img"></div>
+                </div>
+                <div class="card">
+                    <img src="/assets/lanscape.svg" width="25" height="25" alt="">
+                    <div>
+                        <h3>Service Item #4</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
+                            nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
+                            sed orci suspendisse. </p>
+                        <a href="#">
+                            <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
+                        </a>
+                    </div>
+                    <div class="hover-img"></div>
+                </div>
+            </div>
+        </section>
+        <!-- Home Services End -->
+        <!-- Mini Contact Start -->
+        <section id="small-contact">
+            <div class="heading">
+                <div>
+                    <h2>We offer Landscaping in Tulsa, Broken Arrow, and Glenpool. Give us a call today!</h2>
+                    <!-- <p>Serving the best quality work for Tulsa, Oklahoma and surrounding areas</p> -->
+                </div>
+                <a href="contact.html" class="btn">Request a Consultation</a>
+            </div>
+            <div class="overlay"></div>
+        </section>
+        <!-- Mini Contact End -->
     </main>
     <!-- Main End -->
     <!-- Footer -->
