why us section and opt

--- a/index.html
+++ b/index.html
@@ -245,6 +245,46 @@
             <div class="overlay"></div>
         </section>
         <!-- Mini Contact End -->
+        <!-- Why Us Start -->
+        <section id="why">
+            <div class="container">
+                <div class="heading">
+                    <span>Why Us</span>
+                    <h2>Why you should choose us as your landscapers</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
+                        nibh
+                        donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed orci
+                        suspendisse.</p>
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <div class="circle">
+                            <img src="/assets/quality.svg" alt="" width="25" height="25">
+                        </div>
+                        <h3>Quality One</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                    </div>
+                    <div class="card">
+                        <div class="circle">
+                            <img src="/assets/quality.svg" alt="" width="25" height="25">
+                        </div>
+                        <h3>Quality Two</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
+                    </div>
+                    <div class="card">
+                        <div class="circle">
+                            <img src="/assets/quality.svg" alt="" width="25" height="25">
+                        </div>
+                        <h3>Quality Three</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
+                    </div>
+                </div>
+                <div class="graphic">
+                    <img src="/assets/img01i.webp" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Why Us End -->
     </main>
     <!-- Main End -->
     <!-- Footer -->
