--- a/index.html
+++ b/index.html
@@ -280,11 +280,63 @@
                     </div>
                 </div>
                 <div class="graphic">
-                    <img src="/assets/img01i.webp" alt="">
+                    <img src="/assets/img06.webp" alt="" width="450" height="600">
                 </div>
             </div>
         </section>
         <!-- Why Us End -->
+        <!-- Portfolio start -->
+        <section id="home-gallery">
+            <div class="heading">
+                <span>Our Portfolio</span>
+                <h2>View Some of Our latest Projects</h2>
+            </div>
+            <div class="grid">
+                <div class="item">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img05.webp">
+                            <source media="(min-width: 601)" srcset="/assets/img05.webp">
+                            <img src="/assets/img05m.webp" alt="house" width="300" height="166">
+                    </picture>
+                </div>
+                <div class="item">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img01i.webp">
+                            <source media="(min-width: 601)" srcset="/assets/img01i.webp">
+                            <img src="/assets/img01i.webp" alt="house" width="300" height="166">
+                    </picture>
+                </div>
+                <div class="item">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img03m.webp">
+                            <source media="(min-width: 601)" srcset="/assets/img03m.webp">
+                            <img src="/assets/img03m.webp" alt="house" width="300" height="166">
+                    </picture>
+                </div>
+                <div class="item">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img02m.webp">
+                            <source media="(min-width: 601)" srcset="/assets/img02m.webp">
+                            <img src="/assets/img02m.webp" alt="house" width="300" height="166">
+                    </picture>
+                </div>
+                <div class="item">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img06.webp">
+                            <source media="(min-width: 601)" srcset="/assets/img06.webp">
+                            <img src="/assets/img06.webp" alt="house" width="300" height="166">
+                    </picture>
+                </div>
+                <div class="item">
+                    <picture>
+                        <source media="(max-width: 600)" srcset="/assets/img05.webp">
+                            <source media="(min-width: 601)" srcset="/assets/img05.webp">
+                            <img src="/assets/img05m.webp" alt="house" width="300" height="166">
+                    </picture>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio end -->
     </main>
     <!-- Main End -->
     <!-- Footer -->
