--- a/index.html
+++ b/index.html
@@ -269,14 +269,14 @@
                             <img src="/assets/quality.svg" alt="" width="25" height="25">
                         </div>
                         <h3>Quality Two</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                     </div>
                     <div class="card">
                         <div class="circle">
                             <img src="/assets/quality.svg" alt="" width="25" height="25">
                         </div>
                         <h3>Quality Three</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.  </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                     </div>
                 </div>
                 <div class="graphic">
@@ -295,48 +295,153 @@
                 <div class="item">
                     <picture>
                         <source media="(max-width: 600)" srcset="/assets/img05.webp">
-                            <source media="(min-width: 601)" srcset="/assets/img05.webp">
-                            <img src="/assets/img05m.webp" alt="house" width="300" height="166">
+                        <source media="(min-width: 601)" srcset="/assets/img05.webp">
+                        <img src="/assets/img05m.webp" alt="house" width="300" height="166">
                     </picture>
                 </div>
                 <div class="item">
                     <picture>
                         <source media="(max-width: 600)" srcset="/assets/img01i.webp">
-                            <source media="(min-width: 601)" srcset="/assets/img01i.webp">
-                            <img src="/assets/img01i.webp" alt="house" width="300" height="166">
+                        <source media="(min-width: 601)" srcset="/assets/img01i.webp">
+                        <img src="/assets/img01i.webp" alt="house" width="300" height="166">
                     </picture>
                 </div>
                 <div class="item">
                     <picture>
                         <source media="(max-width: 600)" srcset="/assets/img03m.webp">
-                            <source media="(min-width: 601)" srcset="/assets/img03m.webp">
-                            <img src="/assets/img03m.webp" alt="house" width="300" height="166">
+                        <source media="(min-width: 601)" srcset="/assets/img03m.webp">
+                        <img src="/assets/img03m.webp" alt="house" width="300" height="166">
                     </picture>
                 </div>
                 <div class="item">
                     <picture>
                         <source media="(max-width: 600)" srcset="/assets/img02m.webp">
-                            <source media="(min-width: 601)" srcset="/assets/img02m.webp">
-                            <img src="/assets/img02m.webp" alt="house" width="300" height="166">
+                        <source media="(min-width: 601)" srcset="/assets/img02m.webp">
+                        <img src="/assets/img02m.webp" alt="house" width="300" height="166">
                     </picture>
                 </div>
                 <div class="item">
                     <picture>
                         <source media="(max-width: 600)" srcset="/assets/img06.webp">
-                            <source media="(min-width: 601)" srcset="/assets/img06.webp">
-                            <img src="/assets/img06.webp" alt="house" width="300" height="166">
+                        <source media="(min-width: 601)" srcset="/assets/img06.webp">
+                        <img src="/assets/img06.webp" alt="house" width="300" height="166">
                     </picture>
                 </div>
                 <div class="item">
                     <picture>
                         <source media="(max-width: 600)" srcset="/assets/img05.webp">
-                            <source media="(min-width: 601)" srcset="/assets/img05.webp">
-                            <img src="/assets/img05m.webp" alt="house" width="300" height="166">
+                        <source media="(min-width: 601)" srcset="/assets/img05.webp">
+                        <img src="/assets/img05m.webp" alt="house" width="300" height="166">
                     </picture>
                 </div>
             </div>
         </section>
         <!-- Portfolio end -->
+        <!-- Why us / Testimonials start  -->
+        <section id="test">
+            <div class="container">
+                <div class="item">
+                    <h2><span>20</span>Years</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="item">
+                    <h2><span>Local</span>Business</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="item">
+                    <h2><span>30</span>Workers</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+        </section>
+        <div id="why-over">
+            <div class="img-container">
+                <picture>
+                    <source media="(max-width: 600px)" srcset="/assets/img09.jpeg">
+                    <source media="(min-width: 601px)" srcset="/assets/img09.jpeg">
+                    <img aria-hidden='true' decoding="async" src="/assets/img09.jpeg" alt="" width="276" height="132">
+                </picture>
+            </div>
+            <div class="text">
+                <span>Testimonials</span>
+                <h2>What Our Clients Say About Us</h2>
+                <div class="swiper swiper-container mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-1 swiper-slide">
+                            <div class="swiper-content">
+                                <div class="stars">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                </div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc, molestie dolor ac
+                                    facilisi egestas
+                                    eget. Viverra pellentesque in nisl porta porttitor auctor ut dignissim. </p>
+                                <div class="info">
+                                    <img src='/assets/avatar.svg' alt="person icon" width="40" height="40">
+                                    <div>
+                                        <h4>Customer Name</h4>
+                                        <p>Certified Google Review</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-2 swiper-slide">
+                            <div class="swiper-content">
+                                <div class="stars">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                </div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc, molestie dolor ac
+                                    facilisi egestas
+                                    eget. Viverra pellentesque in nisl porta porttitor auctor ut dignissim. </p>
+                                <div class="info">
+                                    <img src='/assets/avatar.svg' alt="person icon" width="40" height="40">
+                                    <div>
+                                        <h4>Customer Name</h4>
+                                        <p>Certified Google Review</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-3 swiper-slide">
+                            <div class="swiper-content">
+                                <div class="stars">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                    <img src="/assets/star.svg" alt="star" width="25" height="25">
+                                </div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc, molestie dolor ac
+                                    facilisi egestas
+                                    eget. Viverra pellentesque in nisl porta porttitor auctor ut dignissim. </p>
+                                <div class="info">
+                                    <img src='/assets/avatar.svg' alt="person icon" width="40" height="40">
+                                    <div>
+                                        <h4>Customer Name</h4>
+                                        <p>Certified Google Review</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="swiper-next-custom">
+                    <img src="/assets/next.svg" alt="">
+                </div>
+                <div class="swiper-prev-custom">
+                    <img src="/assets/prev.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <!-- Why us / testimonials end -->
     </main>
     <!-- Main End -->
     <!-- Footer -->
@@ -395,6 +500,7 @@
     </div>
     <!-- Footer -->
     <!-- Scripts -->
+    <script src="/scripts/swiper-bundle.min.js"></script>
     <script src='scripts/main.js'></script>
 </body>
 
