--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 
     <meta name="description" content="">
     <meta name="keywords" content="">
-
-    <!--Social Media Display-->
     <meta property="og:title" content="" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
@@ -442,6 +440,24 @@
             </div>
         </div>
         <!-- Why us / testimonials end -->
+        <!-- Mini Contact Start -->
+        <section id="small-contact" class='last-misc' style="margin-top: unset;">
+            <div class="heading">
+                <div>
+                    <h2>We offer Landscaping in Tulsa, Broken Arrow, and Glenpool. Give us a call today!</h2>
+                    <!-- <p>Serving the best quality work for Tulsa, Oklahoma and surrounding areas</p> -->
+                </div>
+                <a href="contact.html" class="btn">Request a Consultation</a>
+            </div>
+            <div class="overlay"></div>
+        </section>
+        <!-- Mini Contact End -->
+        <div class="fixed">
+            <button class="top-link hide" id="js-top">
+                <img src="assets/up-arrow.svg" alt="up arrow" class="" width='22' height='22' />
+                <span class="screen-reader-text">Contact</span>
+            </button>
+        </div>
     </main>
     <!-- Main End -->
     <!-- Footer -->
@@ -477,13 +493,13 @@
                         <div>
                             <img src="/assets/phone-call-f.svg" alt="phone icon" />
                         </div>
-                        <a href="#">(918) 312-7266</a>
+                        <a href="#">(918) 123 - 4567</a>
                     </li>
                     <li>
                         <div>
                             <img src="/assets/email.svg" alt="mail icon" />
                         </div>
-                        <a href="#">RivasWebDesigns@gmail.com</a>
+                        <a href="#">landscape@gmail.com</a>
                     </li>
                     <li>
                         <div>
@@ -496,7 +512,7 @@
         </div>
     </footer>
     <div class="credit">
-        <p>&copy Rivas Web Designs 2022 | All Rights Reserved.</p>
+        <p>&copy RR | All Rights Reserved.</p>
     </div>
     <!-- Footer -->
     <!-- Scripts -->
