--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="preload" as="font" type="font/woff2" href="/fonts/GeneralSans-Light.woff2" crossorigin="">
     <link rel="preload" as="font" type="font/woff2" href="/fonts/GeneralSans-Regular.woff2" crossorigin="">
 
-    <title>Title | Business | Location, OK</title>
+    <title>Landscaping Demo by RR</title>
 </head>
 
 <body>
