--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </p>
                 <div class="btns">
                     <a href="#" class="btn">About Us</a>
-                    <a href="#" class="btn">Contact us</a>
+                    <a href="contact.html" class="btn">Contact us</a>
                 </div>
             </div>
             <!-- Content-->
@@ -93,9 +93,9 @@
             <div class="card">
                 <div class="head">
                     <picture>
-                        <source media="(max-width: 600)" srcset="/assets/img03m.webp">
-                        <source media="(min-width: 601)" srcset="/assets/img03m.webp">
-                        <img src="/assets/img03m.webp" alt="lawnmower" width="300" height="166">
+                        <source media="(max-width: 600px)" srcset="/assets/img02m.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/img02.webp">
+                        <img aria-hidden='true' decoding="async" src="/assets/img02.jpeg" alt="" width="276" height="132">
                     </picture>
                 </div>
                 <div class="body">
@@ -162,7 +162,7 @@
                         vestibulum dolor mi venenatis turpis.
                     </p>
                     <div class="btns">
-                        <a href="#" class="btn">Contact us</a>
+                        <a href="contact.html" class="btn">Contact us</a>
                         <a href="#" class="btn">About Us</a>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
                             nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
                             sed orci suspendisse. </p>
-                        <a href="#">
+                        <a href="contact.html">
                             <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                         </a>
                     </div>
@@ -196,7 +196,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
                             nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
                             sed orci suspendisse. </p>
-                        <a href="#">
+                        <a href="contact.html">
                             <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                         </a>
                     </div>
@@ -209,7 +209,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
                             nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
                             sed orci suspendisse. </p>
-                        <a href="#">
+                        <a href="contact.html">
                             <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                         </a>
                     </div>
@@ -222,7 +222,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
                             nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
                             sed orci suspendisse. </p>
-                        <a href="#">
+                        <a href="contact.html">
                             <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                         </a>
                     </div>
