--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                         <h2>Get In Touch</h2>
                         <div class="flex">
                             <div class="form-control dropdown">
-                                <p>Subject</p>
+                                <p>How did you hear about us?</p>
                                 <select name="contact-reason" form="contact-form" aria-label="contact reason" required>
                                     <option value="" disabled selected>Select an option</option>
                                     <option value="option">Option 1</option>
@@ -155,7 +155,7 @@
         <section id="small-contact" class='last-misc' style="margin-top: unset;">
             <div class="heading">
                 <div>
-                    <h2>Thank for visiting our landscaping demo!</h2>
+                    <h2>Thank for visiting our landscaping demo! This modern, custom website is now available.</h2>
                     <!-- <p>Serving the best quality work for Tulsa, Oklahoma and surrounding areas</p> -->
                 </div>
                 <a href="index.html" class="btn">Go back home</a>
